--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,9 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - libtool
     - make
+  host:
+    - libtool
 
 test:
   commands:
