--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,9 @@ source:
   sha256: 09156f43dd2128bd347cbeebe50d9a571d32c64e0cf18d211197946aff7226e0
 
 build:
-  number: 0
+  number: 1
+  run_exports:
+  - {{ pin_subpackage('libvterm', max_pin='x.x') }}
 
 requirements:
   build:
