--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -17,7 +17,9 @@ requirements:
     - ${{ compiler('c') }}
     - ${{ stdlib('c') }}
     - if: unix
-      then: make
+      then:
+        - make
+        - perl
     - if: win
       then:
         - cmake
